Removes some uses of lang3, removes /dispfill and /debug